--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Pricing Calculator</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+      body, .jumbotron { padding: 30px; }
+    </style>
   </head>
   <body>
+
+    <div class="jumbotron">
+      <h2>How much do pies cost?</h2>
+
+      <form>
+        <div class="form-group">
+          <label for="price">Price</label>
+          <input type="text" class="form-control" name="price" value="30">
+        </div>
+
+        <div class="form-group">
+          <label for="quantity"></label>
+          <input type="number" class="form-control" name="quantity" value="1">
+        </div>
+
+      </form>
+    </div>
+
+
     <script>
-
-
-
-
 
     </script>
 
