final html and css styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
       body, .jumbotron { padding: 30px; }
+      .text-giant { font-size: 40px }
     </style>
   </head>
   <body>
@@ -23,6 +24,8 @@
           <label for="quantity"></label>
           <input type="number" class="form-control" name="quantity" value="1">
         </div>
+
+        <div class="text-right text-giant">$30</div>
 
       </form>
     </div>
