--- a/index.html
+++ b/index.html
@@ -25,13 +25,40 @@
           <input type="number" class="form-control" name="quantity" value="1">
         </div>
 
-        <div class="text-right text-giant">$30</div>
+        <div class="text-right text-giant total">$30</div>
 
       </form>
     </div>
 
-
     <script>
+    //FIRST: Grab everything we need from DOM ======
+    const priceInput = document.querySelector('[name=price]')
+    const quantityInput = document.querySelector('[name=quantity]')
+    const total = document.querySelector('[name=total]')
+    //Need inputs from labels and need to update total
+
+
+
+
+    //THIRD: Create the functions needed ======
+    function calculatePieCost() {
+      const price = priceInput.value;
+      const quantity = quantityInput.value;
+      const cost = price * quantity;
+      // console.log(priceInput.value)
+      console.log(total)
+    }
+
+
+
+    //SECOND: Add event listeners ======
+    priceInput.addEventListener('input', calculatePieCost)
+    //Need to incorporate changes from input text to update total
+    //Grab everything from DOM, create functions, attach functions to DOM with
+    //event listeners
+    //Functions can be hoisted to top and used
+
+
 
     </script>
 
