--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-          <label for="quantity"></label>
+          <label for="quantity">Quantity</label>
           <input type="number" class="form-control" name="quantity" value="1">
         </div>
 
@@ -34,7 +34,7 @@
     //FIRST: Grab everything we need from DOM ======
     const priceInput = document.querySelector('[name=price]')
     const quantityInput = document.querySelector('[name=quantity]')
-    const total = document.querySelector('[name=total]')
+    const total = document.querySelector('.total')
     //Need inputs from labels and need to update total
 
 
@@ -45,14 +45,17 @@
       const price = priceInput.value;
       const quantity = quantityInput.value;
       const cost = price * quantity;
-      // console.log(priceInput.value)
-      console.log(total)
+      console.log(priceInput.value);
+      console.log(quantityInput.value);
+      console.log(cost);
+      total.innerText = '$' + cost.toFixed(2);//cost to 2 decimals
     }
 
 
 
     //SECOND: Add event listeners ======
     priceInput.addEventListener('input', calculatePieCost)
+    quantityInput.addEventListener('input', calculatePieCost)
     //Need to incorporate changes from input text to update total
     //Grab everything from DOM, create functions, attach functions to DOM with
     //event listeners
