--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         </div>
 
         <div class="form-group">
-          <label for="quantity">Quantity</label>
+          <label for="quantity">
+            Quantity
+            <span class="label label-primary quantity-label">1</span>
+          </label>
           <input type="range" class="form-control" name="quantity" value="1" min="1" max="10" step="1">
         </div>
 
@@ -35,6 +38,7 @@
     const priceInput = document.querySelector('[name=price]')
     const quantityInput = document.querySelector('[name=quantity]')
     const total = document.querySelector('.total')
+    const quantityLabel = document.querySelector('.quantity-label')
     //Need inputs from labels and need to update total
 
 
@@ -51,14 +55,19 @@
       total.innerText = '$' + cost.toFixed(2);//cost to 2 decimals
     }
 
+    function updateQuantityLabel() {
+      const quantity = quantityInput.value;
+      quantityLabel.innerText = quantity;
+    }
+
     //shows calculated cost on first run using numbers from form-group div
     calculatePieCost()
-
-
 
     //SECOND: Add event listeners ======
     priceInput.addEventListener('input', calculatePieCost)
     quantityInput.addEventListener('input', calculatePieCost)
+    quantityInput.addEventListener('input', updateQuantityLabel)
+
     //Need to incorporate changes from input text to update total
     //Grab everything from DOM, create functions, attach functions to DOM with
     //event listeners
